# magic-context

./: .gitignore  LICENSE  README.md
blender-plugin/: README.md  background-mode-plugin-development-guide.md  blender-addon-installation-guide.md  blender-background-mode-caveats.md  blender-data-persist-guide.md  blender-plugin-automated-testing-guide.md  blender-plugin-project-initialization-guide.md  blender-process-management.md
configs/: README.md
general/: README.md  about-profile-project-structure.md  context-dir-guide.md  howto-add-ssh-key-windows-gcp.md  howto-configure-git-submodule-https-pull-ssh-push.md  howto-install-mermaid-cli.md  howto-install-pytorch-with-cn-mirrors.md  howto-manage-pixi-submodule-environments.md  howto-pyproject-pixi-integration.md  howto-setup-codex-cli-mcp-on-windows.md  howto-setup-litellm-proxy-multi-format.md  howto-setup-pypi-github-actions.md  howto-switch-apt-to-aliyun-mirror.md  howto-time-dnn-models-using-spmc.md  howto-train-large-models-on-gcp-cost-effectively.md  howto-use-yunwu-in-codex.md  pypi-project-init-guide.md  python-coding-guide.md
instructions/: add-graphics.md  apply-graphics.md  attrs-usage-guide.md  check-code.md  find-online.md  find-related-works.md  headless-testing.md  make-backlog.md  make-hint.md  make-manual-python-script.md  make-refactor-plan.md  make-roadmap.md  make-unit-test-python.md  mermaid-seq-styling.md  no-python-main.md  python-coding-guide.md  review-code-by-mem.md  review-code-by-search.md  review-code-with-aider.md  save-command.md  search-proactively.md  tavily-guide.md  write-code.md
knowledge-base/: README.md
mcp-dev/: README.md  howto-call-mcp-servers-programmatically.md  mcp-server-development-guide.md
roles/: academic_survey_agent.md
scripts/: README.md  add-my-keys.sh  configure-submodule-https-ssh.sh  configure-submodule-https.sh  download-html.py  (+7 more)
skills/tools/pixi/pixi-make-cu-build-env/demo-code/: CMakeLists.txt  build-and-run.sh  main.cpp  test_basic.cu  test_cublas.cu  test_cudnn.cu  test_nccl.cu
(+272 files in other folders)
